// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.susilon.ngocol";
option java_outer_classname = "NgocolProto";

package ngocol;

// The greeting service definition.
service Ngocol {
  // List User
  rpc ListUser (User) returns (UserList) {}

  // Send Text
  rpc SendText (MsgData) returns (MsgData) {}

  // Waiting Text
  rpc WaitText (stream MsgData) returns (stream MsgData) {}
}

// The request message containing json data
message JsonData {
  string data = 1;  
}

message MsgData {	
	string User = 1;
	string Message = 2;
	string Destination = 3;
}

message ResponseMessage {
	string Status = 1;
	string Data = 2;
}

message User {
	string Username = 1;	
	string Status = 2;
}

message UserList {
	repeated User Users = 1;	
}